Run OpenRewrite Java 17 recipe