@@ -149,7 +149,6 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDate;
@@ -200,7 +199,6 @@ import java.util.stream.DoubleStream;
 import java.util.stream.IntStream;
 import java.util.stream.LongStream;
 import java.util.stream.Stream;
-
 import org.assertj.core.api.AssertFactory.ValueProvider;
 import org.assertj.core.util.Lists;
 import org.assertj.core.util.Sets;
@@ -3925,7 +3923,7 @@ class InstanceOfAssertFactoriesTest {
   @Nested
   class Path_Factory {
 
-    private final Object actual = Paths.get("non-existing");
+    private final Object actual = Path.of("non-existing");
 
     @Test
     void getRawClass() {
