@@ -25,8 +25,6 @@ import static org.mockito.Mockito.mock;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-
 import org.assertj.core.internal.PathsBaseTest;
 import org.junit.jupiter.api.Test;
 
@@ -82,7 +80,7 @@ class Paths_assertEndsWith_Test extends PathsBaseTest {
   void should_pass_if_actual_ends_with_other() throws IOException {
     // GIVEN
     Path actual = createFile(tempDir.resolve("actual"));
-    Path other = Paths.get("actual");
+    Path other = Path.of("actual");
     // WHEN/THEN
     underTest.assertEndsWith(INFO, actual, other);
   }
@@ -92,7 +90,7 @@ class Paths_assertEndsWith_Test extends PathsBaseTest {
     // GIVEN
     Path file = createFile(tempDir.resolve("file"));
     Path actual = createSymbolicLink(tempDir.resolve("actual"), file);
-    Path other = Paths.get("file");
+    Path other = Path.of("file");
     // WHEN/THEN
     underTest.assertEndsWith(INFO, actual, other);
   }
@@ -101,7 +99,7 @@ class Paths_assertEndsWith_Test extends PathsBaseTest {
   void should_pass_if_other_is_not_normalized() throws IOException {
     // GIVEN
     Path actual = createFile(tempDir.resolve("actual"));
-    Path other = Paths.get("actual", "..", "actual", ".");
+    Path other = Path.of("actual", "..", "actual", ".");
     // WHEN/THEN
     underTest.assertEndsWith(INFO, actual, other);
   }
